[package]
name = "fehler-macros"
version = "1.0.0"
edition = "2018"
authors = ["Without Boats <boats@mozilla.com>"]
license = "MIT OR Apache-2.0"

description = "Macros des Fehlers"
repository = "https://github.com/withoutboats/fehler"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.29"
proc-macro2 = "1.0.63"

[dependencies.syn]
features = ["fold", "full", "parsing"]
version = "2.0.22"
